# llmconv

./: .gitignore  .gitmodules  README.md  README2  pyproject.toml
build_docs/: Makefile
build_docs/source/: conf.py  index.rst  static_assets.rst  usage.rst
build_docs/source/api/: ara.config.rst  ara.fortune.rst  ara.llm.rst  ara.persistence.rst  ara.rst  ara.webclient.rst  ara.world.rst
data/assets/fortune/: iching.json  inspiration.json
data/assets/items/: bronze_sewer_key.toml
data/assets/plot/: 0.toml  fin_scene.toml  garden_scene.toml  tea_scene.toml  walk_scene.toml
docs/python/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  static_assets.html  usage.html
docs/python/_modules/: index.html
docs/python/_sources/: index.rst.txt
docs/python/api/: ara.agent.html  ara.cli.html  ara.config.html  ara.html  ara.llm.html  ara.memory.html  ara.models.html  ara.persistence.html  ara.utils.html  ara.webclient.html  ara.world.html
examples/: aractl.py  demo.py
scripts/: _grammar_cli.py  ability_generate.py  ability_generate_backup.py  gen_crowd.py  gen_crowd_symbols.toml  strip_ansi.py  title_generate.py  title_generate_backup.py
src/ara/: __main__.py  config.py  models.py
src/ara/agent/: __init__.py  __main__.py  client.py  debug_bridge.py  server.py  state.py  types.py
src/ara/cli/: __init__.py  __main__.py  aractl.py
src/ara/fortune/: __init__.py  ability.py  names.py  title.py  tokens.py
src/ara/llm/: client.py  context.py  models.py  tools.py
src/ara/memory/: chroma.py  knowledge.py  story_memory.py  wiki.py
src/ara/persistence/: __init__.py  save.py
src/ara/prompts/: __init__.py  character.py  narrator.py  orchestrator.py  player.py  summarizer.py
tests/: helpers.py  settings.py  test_agent_api.py  test_agent_state.py  test_aractl_e2e.py  test_canonical.py  test_character.py  test_character_wiki_recall.py  test_chroma.py  test_cli_smoke.py  test_context.py  test_debug_context.py  test_fortune.py  test_fortune_tokens.py  test_grammar_cli.py  test_hidden_sprites.py  test_importance.py  test_inner_monologue.py  test_integration.py  test_items.py  test_knowledge.py  test_knowledge_robustness.py  test_llm_client.py  test_location.py  test_memory.py  test_multiscene_memory.py  test_note_to_orchestrator.py  test_orchestrator.py  test_per_story_assets.py  test_prefetch_wiki.py  test_prompt_world_map.py  test_prompts.py  test_save.py  test_stories.py  test_story.py  test_summarizer.py  test_summarizer_server.py  test_time.py  test_tools.py  test_webclient.py  (+1 more)
(+221 files in other folders)
